# SnobalIO_ubuntu

./: CMakeLists.txt  CMakeLists.txt~  README.md  __init__.py  _do_tstep.c  _h_le.c  run_isnobal_1d.c  run_snobal.c  snobalio.c  snobalio.c~  snobalio.h  snobalio.h~  snobalio.py  testIO.py
